GUI Bugfixes and Improvements for ReBalancingViewer  - Rebalancing Restults for Accounts are shown  - Accounts can be excluded from Rebalancing  - Tooltips explain “use for rebalancing”  - Better colors in dark mode

--- a/name.abuchen.portfolio.ui/css/dark/common.css
+++ b/name.abuchen.portfolio.ui/css/dark/common.css
@@ -44,6 +44,7 @@ CustomColors {
 
 	red-foreground: #FE2B05;
 	green-foreground: #02F500;
+	gray-foreground: #808080;
 	
 	hyperlink: #6FC5EE;
 }
