--- a/name.abuchen.portfolio.ui/css/light/common.css
+++ b/name.abuchen.portfolio.ui/css/light/common.css
@@ -81,5 +81,6 @@ CustomColors {
 
 	red-foreground: #800000;
 	green-foreground: #008000;
+	gray-foreground: #707070;
 
 }
